--- a/package.json
+++ b/package.json
@@ -6,10 +6,35 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "host": "vite --host"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.0"
+    "@nuxt/devtools": "^0.7.6",
+    "@nuxt/types": "^2.17.1",
+    "@nuxt/typescript-build": "^3.0.1",
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
+    "@types/node": "^18.17.1",
+    "@vueuse/core": "^10.3.0",
+    "@vueuse/nuxt": "^10.3.0",
+    "nuxt": "^3.6.5",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@nuxtjs/proxy": "^2.1.0",
+    "@pinia/nuxt": "^0.4.11",
+    "axios": "^1.5.0",
+    "click-outside-vue3": "^4.0.1",
+    "cookie-universal-nuxt": "^2.2.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "nuxt3-lazy-load": "^1.0.9",
+    "pinia-plugin-persistedstate": "^3.2.0",
+    "sass": "^1.64.2",
+    "swiper": "^10.1.0",
+    "v-click-outside": "^3.2.0"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
