--- a/package.json
+++ b/package.json
@@ -24,15 +24,12 @@
     "@nuxtjs/proxy": "^2.1.0",
     "@pinia/nuxt": "^0.4.11",
     "axios": "^1.5.0",
-    "click-outside-vue3": "^4.0.1",
     "cookie-universal-nuxt": "^2.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "nuxt3-lazy-load": "^1.0.9",
     "pinia-plugin-persistedstate": "^3.2.0",
-    "sass": "^1.64.2",
-    "swiper": "^10.1.0",
-    "v-click-outside": "^3.2.0"
+    "sass": "^1.64.2"
   },
   "overrides": {
     "vue": "latest"
